removed 4.15.0 folder fixed some cosmetic errors